--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,14 @@ main {
     border: 1px solid #ccc;
     border-top: none;
 }
+
+@media (max-width: 600px) {
+    .support-bar a {
+        display: block;
+        margin: 5px 0;
+    }
+
+    .category-title {
+        font-size: 1.2em;
+    }
+}
